5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1644_2703.log
== SUBMITION (2019-04-09 16:23:38) 
-- CODE:
a = float(input())
if (a >= 18):
	b ="eleitor"
else(a < 18)
   b = "nao_eleitor"
print(b)
-- EXECUTION TIME:
0.183689
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 4
    else(a < 18)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:23:47) 
-- CODE:
a = float(input())
if (a >= 18):
	b ="eleitor"
else(a < 18)
   b = "nao_eleitor"
print(b)
-- ERROR:
File "XXXX", line 4
    else(a < 18)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:23:49) 
-- CODE:
a = float(input())
if (a >= 18):
	b ="eleitor"
else(a < 18)
   b = "nao_eleitor"
print(b)
-- ERROR:
File "XXXX", line 4
    else(a < 18)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:23:52) 
-- CODE:
a = float(input())
if (a >= 18):
	b ="eleitor"
else(a < 18):
   b = "nao_eleitor"
print(b)
-- EXECUTION TIME:
0.165568
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 4
    else(a < 18):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:23:55) 
-- CODE:
a = float(input())
if (a >= 18):
	b ="eleitor"
else(a < 18):
   b = "nao_eleitor"
print(b)
-- ERROR:
File "XXXX", line 4
    else(a < 18):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:24:09) 
-- CODE:
a = float(input())
if (a > 18):
	b ="eleitor"
else(a < 18):
   b = "nao_eleitor"
print(b)
-- EXECUTION TIME:
0.117708
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 4
    else(a < 18):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:24:21) 
-- CODE:
a = float(input())
if (a >= 18):
	b ="eleitor"
else(a <= 18):
   b = "nao_eleitor"
print(b)
-- EXECUTION TIME:
0.17639
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 4
    else(a <= 18):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:24:35) 
-- CODE:
a = float(input())
if (a >= 18):
	b ="eleitor"
else:
   b = "nao_eleitor"
print(b)
-- EXECUTION TIME:
0.164051
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
